# ctafconf

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  README  README.DEVEL  README.md  TODO  VERSION  cde.sh  ctafconf-configuration  ctafconf-install  ctafconf-uninstall  git.sh
etc/: Xdefaults  asoundrc  bash.grk  emacs.grk  fluxbox.grk  gdmkdm.grk  gnome.grk  ksh.grk  nano.grk  nanorc  screen.grk  screenrc  startx.grk  tcsh.grk  toprc  vim.grk  vimrc  xbindkeys.grk  xsession.grk  zsh.grk
etc/awesome/: rc.lua
etc/bash/: bashprompt  bashrc
etc/e16/: .initialized  .zoom_warn  file.menu  user_theme.cfg
etc/emacs/: bindings.emacs  color.emacs  ctafconf.el  ctafconf_bindings.el  ctafconf_color.el  ctafconf_functions.el  ctafconf_misc.el  ctafconf_mode.el  ctafconf_profile.el  ctafconf_prog.el  ctafconf_settings.el  ctafconf_startup.el  emacs  emacs.config  functions.emacs  menu.emacs  misc.emacs  mode.emacs  prog.emacs  settings.emacs  startup.emacs  test.emacs
etc/emacs/site-lisp/: asciidoc.el  auto-template.el  bm.el  doc-mode.el  doxymacs.el  generic-dl.el  generic-menu.el  hideshow.el  hideshowvis.el  htmlize.el  icicles-cmd.el  icicles-fn.el  icicles.el  ilisp.tgz  jjproject.el  marker-visit.el  safe-load.el  semantic-tag-folding.el  setnu+.el  srspeedbar.el  std.el  std_comment.el  tabbar.el  tiger.el
etc/emacs/site-lisp/company-0.5/: company.el
etc/emacs/site-lisp/emacs-config/: .happyemacs  .myemacs_nuntiux  (+18 more)
etc/emacs/templates/: ada.sub  ada.tpl  am.tpl  asciidoc.html  asciidoc.tpl  c.sub  c.tpl  cc.sub  cc.tpl  cmake.sub  cmake.tpl  cmakelists.tpl  e.sub  e.tpl  el.sub  el.tpl  h.sub  h.tpl  hh.sub  hh.tpl  hpp.sub  hpp.tpl  html.sub  html.tpl  hxx.sub  hxx.tpl  java.sub  java.tpl  makefile.tpl  ml.sub  ml.tpl  php.sub  php.tpl  pl.tpl  py.tpl  sh.tpl  sieve.tpl  test  tex.sub  tex.tpl  (+1 more)
etc/enlightenment/: backgrounds  file.menu  user_theme.cfg
etc/fluxbox/: apps  icons  init  keys  menu  menu-general  menuconfig  menudef.linux  slitlist
etc/fluxbox/styles/: ctaf  ctaf-notitle
etc/gconf/: ct-gconf.sh  gnome-interface  gnome-terminal  metacity-window  panel
etc/gconf/desktop/: Firefox.desktop  Synaptic.desktop  Terminal.desktop  Thunderbird.desktop
etc/gnome/: gnome-terminal  gnome-terminal-ctafconf  panel
etc/grk/: bash.grk  e16.grk  emacs.grk  fluxbox.grk  gdmkdm.broken  gdmkdm.grk  gnome.grk  ion3.grk  ksh.grk  nano.grk  screen.grk  startx.grk  tcsh.grk  top.grk  torsmo.grk  vim.grk  xsession.grk  zsh.grk
etc/ion3/: cfg_ion.lua  cfg_mouse.lua  cfg_sp.lua  cfg_statusbar.lua  ctaf_bindings.lua  look_greenlight.lua  status.sh  statusd_my.lua
etc/ksh/: kshprompt  kshrc
etc/mine/: bashrc.mine  emacs-post.mine  emacs-pre.mine  emacs.mine  env.mine  fbmenu.mine  kshrc.mine  tcshrc.mine  user-profile.mine  xsession.mine  zshenv.mine  zshrc.mine
etc/nano/: nanorc
etc/screen/: screenrc
etc/shell/: alias  alias.Darwin  alias.FreeBSD  alias.NetBSD  alias.OpenBSD  alias.debian  alias.epita  alias.freebsd  alias.gentoo  alias.sh  ctaftools.sh  env  env.Darwin  env.epita  globalenv  grktools.sh  motd  shfunction  ssft.sh  xsession.sh
etc/shell/env.sys/: epita.sys.env  http proxy.sys.env  rtems.sys.env  template  tsocks.sys.env
etc/shlib/: grktools.sh  shelltools.sh  ssft.sh  xsession.sh
etc/tcsh/: tcshprompt  tcshrc
etc/torsmo/: torsmorc
etc/users/: user-profile.sh
etc/vim/: .gitignore  README  gvimrc  vimrc
etc/vim/autoload/: ctafconf.vim
etc/vim/ftdetect/: boo.vim  proto.vim  vala.vim  waf.vim
etc/vim/ftplugin/: asciidoc.vim  c.vim  cmake.vim  d.vim  gitconfig.vim  make.vim  python.vim  rst.vim  tex.vim  txt.vim  vala.vim
etc/vim/plugin/: NERD_commenter.vim  cmakedoc.vim  fix_she_bang.vim  imaps.vim  protodef.vim  taglist.vim
etc/vim/skeletons/: htmlskel.html  plskel.pl  pyskel.py  rbskel.rb  texskel.tex
etc/vim/syntax/: boo.vim  cmake.vim
etc/xbindkeys/: xbindkeysrc
etc/xsession/: Xdefaults  ct-autostart.desktop  ctafconf.desktop  wm.sh  wmlist  xsession
etc/zsh/: prompt_ctaf_setup  prompt_wunjo_setup  rubyenv.epita  vcs.zsh  zgitinit  zshalias  zshconf  zshenv  zshkeys  zshoptions  zshprompt  zshrc  zshstyle
gtk-ctafconf/: ChangeLog  Makefile.am  README  TODO  configure.ac
gtk-ctafconf/config/m4/: ax_define_dir.m4
gtk-ctafconf/data/: Makefile.am  ctafconf.tpl  emacs.config  emacs.tpl  main.tpl  regexp.tpl  user-profile.ct-tpl
gtk-ctafconf/src/: Makefile.am  config-object.cc  config-object.hh  config-parser-ctafconf.h  config-parser.cc  config-parser.h  config-parser.hh  config-regexp.cc  config-regexp.hh  configstore.h  er.tpl  gui-factory.cc  gui-factory.h  gui-factory.hh  main.cc  regexp.tpl  string-utils.hh  stringutils.hh  user-profile
perso/repos/: grk-anon.svn
perso/semantic/: empty
perso/ssh/: grk.ssh
profile/: README
profile/aldebaran/: bashrc  env  vimrc  zshrc
profile/ctaf/: env  profile.el  zshrc
profile/gasp/: README  com.googlecode.iterm2.plist  env  qp.py  vim  zshrc
profile/yannick/: env  vimrc  zshrc
share/mine/: emacs.mine  kshrc.mine  tcshrc.mine  user-profile.mine  xsession.mine  zshrc.mine
share/misc/: laptopctaf  lin2win.sh  wmbatteries  wmifinfo
share/misc/debian/: gateway  install.sh  sudoers  xorg.conf
share/misc/freebsd/: cpufreq.sh
share/repos/: chess.cvs  ctafconf.svn  delos.svn  epita.cvs  gns.cvs  namt.svn  noconf.svn  nosh.cvs  nosh.svn
share/ssh/: eltha.ssh  epita.ssh  nosh.ssh  noshell.ssh  sf.ssh
(+21 files in other folders)
